--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.1.2"
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vue": "^4.0.8",
+    "astro": "^4.1.2",
+    "gsap": "^3.12.4",
+    "tailwindcss": "^3.4.1",
+    "three": "^0.136.0",
+    "troisjs": "^0.3.4",
+    "vue": "^3.4.13"
   }
 }
