--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/vue": "^4.0.8",
     "astro": "^4.1.2",
     "gsap": "^3.12.4",
+    "microcms-js-sdk": "^2.7.0",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.4.1",
     "three": "^0.136.0",
     "troisjs": "^0.3.4",
